--- a/Russkyc.DependencyInjection.Demo/Views/SecondaryView.xaml
+++ b/Russkyc.DependencyInjection.Demo/Views/SecondaryView.xaml
@@ -1,12 +1,22 @@
-﻿<Window x:Class="DependencyInjectionDemo.Views.SecondaryView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:DependencyInjectionDemo.Views"
-        mc:Ignorable="d"
-        Title="SecondaryView" Height="450" Width="800">
-    <Grid>
-        
+﻿<Window
+    x:Class="DependencyInjectionDemo.Views.SecondaryView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:DependencyInjectionDemo.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="SecondaryView"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+        <StackPanel Orientation="Vertical">
+            <TextBlock Text="{Binding WelcomeMessage, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Width="250" Text="{Binding WelcomeMessage, UpdateSourceTrigger=PropertyChanged}">
+                <TextBox.InputBindings>
+                    <KeyBinding Key="Enter" Command="{Binding LogCommand}" />
+                </TextBox.InputBindings>
+            </TextBox>
+        </StackPanel>
     </Grid>
 </Window>
